Displays product files in the directory

--- a/stylesheets/royaltycartstyles.css
+++ b/stylesheets/royaltycartstyles.css
@@ -49,7 +49,7 @@
 }
 
 .rcbox_money {
-	background-color: #bbffb2;
+	background-color: #e8ffe5;
 	padding: 4px;
 	border-radius: 0 0 15px 15px;
 	border: 2px solid blue;
