--- a/stylesheets/royaltycartstyles.css
+++ b/stylesheets/royaltycartstyles.css
@@ -1,3 +1,20 @@
+.rcbox_plain {
+	background-color: #f2f2ff;
+	padding: 4px;
+	border-radius: 0 0 15px 15px;
+	border: 2px solid blue;
+	margin: 4px;
+}
+
+.rcbox_money {
+	background-color: #f4fff2;
+	padding: 4px;
+	border-radius: 0 0 15px 15px;
+	border: 2px solid blue;
+	margin: 4px;
+}
+
+
 .rctitle {
 	font-family: 'Josefin Sans', sans-serif;
 	font-size: 22px;
@@ -14,15 +31,49 @@
 	padding: 2px;
 }
 
+.rccontent {
+	font-family: 'Josefin Sans', sans-serif;
+	font-size: 14px;
+	color: #0000ff;
+	text-align: left;
+	padding: 2px;
+}
+
 .rcinfobox{
 	font-family: 'Molengo', sans-serif;
 	font-size: 16px;
 	color: #0000ff;
-	background-color: #DDDDDD;
 	text-align: center;
+	max-width: 400px;
+	background-color: #DDDDDD;
 	border-radius: 15px;
 	padding: 5px;
 	margin: 4px;
+}
+
+
+.rctextinput{
+	font-family: 'Molengo', sans-serif;
+	font-size: 16px;
+	color: #0000ff;
+	text-align: center;
+	max-width: 400px;
+	background-color: #DDDDDD;
+	border-radius: 15px;
+	padding: 5px;
+	margin: 4px;
+}
+
+.rctextinputsmall{
+	font-family: 'Molengo', sans-serif;
+	font-size: 12px;
+	color: #0000ff;
+	text-align: left;
+	max-width: 200px;
+	background-color: #DDDDDD;
+	border-radius: 6px;
+	padding: 3px;
+	margin: 1px;
 }
 
 .rcpulldown{
@@ -53,18 +104,3 @@
 	margin: 3px;
 }
 
-.rcbox_plain {
-	background-color: #f2f2ff;
-	padding: 4px;
-	border-radius: 0 0 15px 15px;
-	border: 2px solid blue;
-	margin: 4px;
-}
-
-.rcbox_money {
-	background-color: #e8ffe5;
-	padding: 4px;
-	border-radius: 0 0 15px 15px;
-	border: 2px solid blue;
-	margin: 4px;
-}
