--- a/stylesheets/royaltycartstyles.css
+++ b/stylesheets/royaltycartstyles.css
@@ -14,6 +14,13 @@
 	margin: 4px;
 }
 
+.rcbox_error {
+	background-color: #ffe5e5;
+	padding: 4px;
+	border-radius: 0 0 15px 15px;
+	border: 2px solid red;
+	margin: 4px;
+}
 
 .rctitle {
 	font-family: 'Josefin Sans', sans-serif;
@@ -28,7 +35,7 @@
 	font-size: 16px;
 	color: #0000ff;
 	text-align: center;
-	padding: 2px;
+	padding: 4px;
 }
 
 .rccontent {
@@ -76,6 +83,18 @@
 	margin: 1px;
 }
 
+.rctextareainput{
+	font-family: 'Molengo', sans-serif;
+	font-size: 12px;
+	color: #0000ff;
+	text-align: left;
+	max-width: 600px;
+	background-color: white;
+	border-radius: 6px;
+	padding: 3px;
+	margin: 1px;
+}
+
 .rcpulldown{
 	font-family: 'Molengo', sans-serif;
 	font-size: 16px;
@@ -103,4 +122,3 @@
 	padding: 2px;
 	margin: 3px;
 }
-
